--- a/app/src/main/res/layout/fragment_personnel.xml
+++ b/app/src/main/res/layout/fragment_personnel.xml
@@ -24,132 +24,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.117"/>
 
-    <GridLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#3F51B5"
-        android:backgroundTint="@color/main_background"
-        android:columnCount="3"
-        android:rowCount="4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.7"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.74"
-        app:layout_constraintWidth_percent="0.85"
-        tools:context=".MainActivity">
-
-        <ImageView
-            android:layout_width="96dp"
-            android:layout_height="90dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:layout_width="97dp"
-            android:layout_height="90dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:layout_width="91dp"
-            android:layout_height="90dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="1"
-            android:layout_column="2"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="3"
-            android:layout_column="1"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="3"
-            android:layout_column="2"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_background" />
-
-
-    </GridLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listCategoriesRv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/textView8"
