--- a/app/src/main/res/layout/fragment_statistiques.xml
+++ b/app/src/main/res/layout/fragment_statistiques.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background"
-    tools:context=".fragments.Statistics"
+    tools:context=".fragments.StatisticsFragment"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="15dp">
 
