--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -11,14 +11,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/choiceOne"
-        android:layout_width="match_parent"
-        android:layout_height="290dp"
-        android:layout_marginBottom="310dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="@color/main_blue"
-        android:clickable="true"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintHeight_percent="0.49"
+        app:layout_constraintWidth_percent="1"
+        android:clickable="true">
 
         <TextView
             android:id="@+id/textChoiceOne"
@@ -28,16 +29,23 @@
             android:layout_marginTop="124dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="121dp"
-            android:text="Chat"
+            android:text="Texte"
+            android:visibility="invisible"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.489" />
+
+        <ImageView
+            android:id="@+id/imageChoiceOne"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -45,17 +53,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/choiceTwo"
-        android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="290dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="318dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@color/main_red"
-        android:orientation="vertical"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintWidth_percent="1">
 
 
         <TextView
@@ -66,17 +72,26 @@
             android:layout_marginTop="133dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="133dp"
-            android:text="Chien"
+            android:text="Texte"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="18dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageChoiceTwo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="0dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout7"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:layout_centerHorizontal="true"
@@ -90,8 +105,10 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.497">
 
         <TextView
             android:id="@+id/textView2"
@@ -110,4 +127,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
