--- a/app/src/main/res/layout/fragment_see_pair.xml
+++ b/app/src/main/res/layout/fragment_see_pair.xml
@@ -8,21 +8,6 @@
     android:background="@color/main_background">
 
 
-    <TextView
-        android:id="@+id/TitleSeePair"
-        android:layout_width="196dp"
-        android:layout_height="34dp"
-        android:text="CategoryName"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.099" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listPairsRv"
         android:layout_width="match_parent"
@@ -32,6 +17,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.7"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/TitleSeePair"
+        android:layout_width="196dp"
+        android:layout_height="34dp"
+        android:text="CategoryName"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="22dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/listPairsRv"
+        app:layout_constraintVertical_bias="0.2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
